Added User & messages model & migrations

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -10,7 +10,16 @@
   			<div class="content">
 				<div class="ui small feed">
 		  			<h4 class="ui header">Followers Activity</h4>
-		  			<div class="event">
+		  			<% @messages.each do |message| %>
+		  				<div class="event">
+			    			<div class="content">
+			      				<div class="summary">
+			         				<%= link_to message.user.username, "#" %> <%= "#{message.body}" %>
+			      				</div>
+			    			</div>
+		  				</div>
+		  			<% end %>
+		  			<!-- <div class="event">
 		    			<div class="content">
 		      				<div class="summary">
 		         				<a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
@@ -37,7 +46,7 @@
 		         				<a>Christian Rocha</a> signed up for the  site.
 		      				</div>
 		    			</div>
-		  			</div>
+		  			</div> -->
 				</div>
 			</div>
 		</div>
