--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -14,39 +14,11 @@
 		  				<div class="event">
 			    			<div class="content">
 			      				<div class="summary">
-			         				<%= link_to message.user.username, "#" %> <%= "#{message.body}" %>
+			         				<em><%= message.user.username %></em> : <%= message.body %>
 			      				</div>
 			    			</div>
 		  				</div>
 		  			<% end %>
-		  			<!-- <div class="event">
-		    			<div class="content">
-		      				<div class="summary">
-		         				<a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
-		      				</div>
-		    			</div>
-		  			</div>
-		  			<div class="event">
-		    			<div class="content">
-		      				<div class="summary">
-		         				<a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
-		      				</div>
-		    			</div>
-		  			</div>
-		  			<div class="event">
-		    			<div class="content">
-		      				<div class="summary">
-		         				<a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
-		      				</div>
-		    			</div>
-		  			</div>
-		  			<div class="event">
-		    			<div class="content">
-		      				<div class="summary">
-		         				<a>Christian Rocha</a> signed up for the  site.
-		      				</div>
-		    			</div>
-		  			</div> -->
 				</div>
 			</div>
 		</div>
