--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,17 +8,8 @@
 	<div class="twelve wide column">
 		<div class="ui fluid raised card chatbox">
   			<div class="content">
-				<div class="ui small feed">
-		  			<h4 class="ui header">Followers Activity</h4>
-		  			<% @messages.each do |message| %>
-		  				<div class="event">
-			    			<div class="content">
-			      				<div class="summary">
-			         				<em><%= message.user.username %></em> : <%= message.body %>
-			      				</div>
-			    			</div>
-		  				</div>
-		  			<% end %>
+				<div class="ui feed">
+		  			<%= render @messages %>
 				</div>
 			</div>
 		</div>
