--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -12,6 +12,18 @@
 		  			<%= render @messages %>
 				</div>
 			</div>
+			<div class="extra content">
+				<%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path) do |f| %>
+					<div class="field">
+						<div class="ui fluid icon input">
+							<%= f.text_field :body %>
+							<!-- <input type="text" placeholder="Enter a messages...."> -->
+							<%= f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
+						</div>
+					</div>
+				</form>
+				<% end %>
+			</div>
 		</div>
 	</div>
 	<div class="four wide column">
